--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ div#search-container-1 form input {
     float: right;
     margin-left: 410px;
     font-size: 15px;
+    display: inline;
+}
+
+#lang span{
+    color: #007bff;
 }
 
 /*******************   NAVIGATION BAR   *************************/
@@ -175,18 +180,16 @@ ul#display-tags a {
 	color: inherit;
 }
 
-a.redLink{
-    color:red;
+ul#display-tags a:hover {
+	text-decoration:none;
+	color: #007bff;
 }
-
-
-
-
 /* ===================            show_tags.html              ========================*/
 
 div #outter_display_area {
     background-color:#D8D8D8;
     min-height: 200px;
+    margin-bottom: 0;
 }
 
 div #inner{
@@ -206,7 +209,6 @@ div .addedDiv {
     margin:0 auto;
     color: #4C5B5C;
     margin-bottom: 37px;
-    line-height: ;
 }
 
 .addedDiv img.covers{
@@ -216,17 +218,21 @@ div .addedDiv {
     padding: 10px 15px 10px 0px;
 }
 
+a.redLink{
+    color:red;
+}
 
+/*      ==================         FOOTER       =================            */
 footer{
     text-align: center;
     font-size: 12px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     padding:20px;
     background-color: #c1d4e0;
 
 }
 
-/* show more function */
+/*   =================          show more function       =====================*/
 .hideContent {
     overflow: hidden;
     line-height: 1em;
@@ -239,6 +245,5 @@ footer{
 }
 
 .show-more span{
-    color: blue;
-    
+    color: #007bff;
 }
