--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,74 @@ div#right {
     margin-left: 5px;
 }
 
+/* =====show tags page mobile */
+
+/* div #outter_display_area {
+    background-color:#D8D8D8;
+    min-height: 200px;
+} */
+
+div #inner{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.prompt {
+    background: whitesmoke;
+}
+
+div .addedDiv {
+    width: 90%;
+    margin:0 auto;
+    color: #4C5B5C;
+    margin-bottom: 37px;
+    line-height: regular;
+    min-height: 240px;
+}
+
+.addedDiv h3{
+    font-size: 1.2rem;
+}
+
+.addedDiv img.covers{
+    position: relative;
+    max-height: auto;
+    max-width: 30vw;
+    box-shadow: 1px 1px 0 1px #fff, 2px 2px 0 1px #424242, 3px 3px 0 1px #fff, 4px 4px 0 1px #424242;
+}
+
+.covers-div{
+    float:left;
+    width: 30vw;
+    height: auto;
+    padding: 0px 15px 10px 0px;
+    margin: 0px 15px 10px 0px;
+}
+a.redLink{
+    color:red;
+}
+
+/* back to top button */
+#backToTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    color: #007bff;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #backToTop:hover {
+    /* color: #F5853F;  */
+    background: #FDE47C;
+  }
+
 
 }
 
