--- a/css/style.css
+++ b/css/style.css
@@ -539,8 +539,9 @@ div#personalized_bar {
 
 div#left {
     width: 100%;
-    margin-left: 5%;
-    margin-right:5%;
+    margin-left: 0px;
+    padding-left:5%;
+    padding-right:5%;
     margin-top: 2%;
 }
 
@@ -570,21 +571,45 @@ div#right {
     flex-direction: column;
 }
 
-#left-side{
+div#left-side{
     width:100%;
     padding-right:5%;
+    padding-left: 5%;
     /* padding:10px; */
 }
+
+div#left-side p{
+    margin-left: 0px;
+}
+
 #right-side{
     width: 100%;
-    padding-left: 0px;
-    margin-left: 5%;
+    /* padding-left: 5%;
+    padding-right:5%; */
+    padding:0px;
+    margin:0px;
     font-size: 15px;
 }
+
+#top-line{
+    padding: 5% 5% 5% 5%;
+    background: whitesmoke;
+}
+
+#tags{
+    padding-left: 5%;
+    padding-right:5%;
+}
+
 #search-container-2{
     margin-left: 5px;
 }
 
+ul#display-tags {
+    list-style-type: none;
+    margin-left:0px;
+    padding-inline-start: 0px;
+}
 /* =====show tags page mobile */
 
 /* div #outter_display_area {
@@ -629,29 +654,9 @@ div .addedDiv {
     padding: 0px 15px 10px 0px;
     margin: 0px 15px 10px 0px;
 }
-a.redLink{
-    color:red;
-}
 
-/* back to top button */
-#backToTop {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    color: #007bff;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-  
-  #backToTop:hover {
-    /* color: #F5853F;  */
-    background: #FDE47C;
-  }
+
+
 
 
 }
