--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ div .addedDiv {
     float:left;
     width: 270px;
     height: 270px;
-    padding: 10px 15px 10px 0px;
+    padding: 0px 15px 10px 0px;
 }
 a.redLink{
     color:red;
@@ -651,7 +651,7 @@ div .addedDiv {
 
 .addedDiv img.covers{
     position: relative;
-    max-height: auto;
+    max-height: 30vh;
     max-width: 30vw;
     box-shadow: 1px 1px 0 1px #fff, 2px 2px 0 1px #424242, 3px 3px 0 1px #fff, 4px 4px 0 1px #424242;
 }
