--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,14 @@ div .addedDiv {
     padding: 20px;
 }
 
+/* ---------------------------       search.html      ---------------------- */
+mark{
+    color:red;
+    background: white;
+    margin:0;
+    padding:0;
+}
+
 /* ===================================      RESPONSIVE       ========================= */
 @media only screen and (max-width: 1000px) {
 
