red border removed when btn onfocus

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ button#yellow_button:hover{
     cursor: pointer;
 }
 
+button#yellow_button:focus{
+    outline:none;
+}
+
 /********************     HEADER   ****************** */
 /* header left */
 header {
